# Dev-Portfolio

./: Game_Projects.py  Updated_Calculator.py  calculator.py  middleware.py
Full_Projects/Django_Based/Django Video Upload Cheat Sheet /: add_video.html  base.html  forms.py  models.py  readme.md  settings.py  urls.py  video_list.html  views.py
Full_Projects/Django_Based/NoteTaking App/: features.md
Full_Projects/Django_Based/NoteTaking App/notes_project/: db.sqlite3
Full_Projects/Django_Based/NoteTaking App/notes_project/notes/: models.py  urls.py  (+1 more)
Full_Projects/Django_Based/Todo List/: pseudocode.md
Full_Projects/Django_Based/Todo List/todo_project/: db.sqlite3
Full_Projects/Django_Based/expenseTracker/expense_tracker/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
Full_Projects/Django_Based/expenseTracker/expense_tracker/expense_tracker/: settings.py  urls.py
Full_Projects/Django_Based/expenseTracker/expense_tracker/expenses/: forms.py  models.py  urls.py  views.py
Full_Projects/Django_Based/expenseTracker/expense_tracker/expenses/migrations/: 0001_initial.py
Full_Projects/Django_Based/expenseTracker/expense_tracker/expenses/templates/: base.html
Full_Projects/Django_Based/expenseTracker/expense_tracker/expenses/templates/expenses/: add_expense.html  expense_list.html  index.html
Full_Projects/Flask_Based/Currency_Converter/: pseudocode.md
Full_Projects/Flask_Based/URL_Shortener/: app.py  database.py  hashing.py  pageRelations.md  todo.md  urls.db
Full_Projects/RpgProject/: classes.py  combatSystem.py  feb14.py  generalTodo.md
(+25 files in other folders)
